# rovibrational-excitation

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_JP.md  README_NEW_SYSTEMS.md  codecov.yml  coverage_badge_setup.md  pyproject.toml  recommended_badges.md  requirements-dev.txt  requirements.txt  test_basis_validation.py  test_new_api.py  test_strategy_review.md
.devcontainer/: devcontainer.json
configs/: config_temp_krotov_linmol.yaml  config_temp_krotov_linmol2.yaml  config_temp_krotov_viblad_v10.yaml  config_temp_krotov_viblad_v3.yaml  config_temp_krotov_viblad_v3_spectral.yaml  config_temp_krotov_viblad_v4.yaml  config_temp_krotov_viblad_v5.yaml  config_temp_local_linmol.yaml  config_temp_local_viblad.yaml  config_v3j2_g1e20.yaml  config_v3j2_g3.75e19.yaml  config_v3j2m_g3.75e19.yaml
docs/: CODECOV_SETUP.md  DOCKER_SETUP.md  PARAMETER_REFERENCE.md  README.md  SWEEP_SPECIFICATION.md  TIME_PROPAGATION.md  UNIT_SYSTEM.md  VERSION_MANAGEMENT.md  coverage-badge-automation.md
examples/: README.md  README_vibrational_2d_mapping.md  absorbance_from_density_matrix.py  example_CO2_AntiSymm.py  example_CO2_absorbance_change.py  example_CO2_boltzmann.py  example_CO2_boltzmann_with_calculator.py  example_CO2_transient_absorption_2D.py  example_SI_base_nondimensionalization.py  example_default_units.py  example_grape_rovibrational_optimization.py  example_krotov_rovibrational_optimization.py  example_krotov_rovibrational_optimization_gaussian_env.py  example_local_optimization_rovibrational.py  example_local_optimization_rovibrational_2.py  example_local_optimization_rovibrational_v3j3.py  example_new_basis_api.py  example_nondimensional_propagation.py  example_optimization_with_config.py  example_params_with_units.py  example_realspace_morse_splitop.py  example_rk4_sparse_cpp.py  example_rovibrational_excitation.py  example_twolevel_2d_map.py  example_twolevel_excitation.py  example_vibrational_2d_map.py  example_vibrational_excitation.py  krotov_rovibrational_optimization_gaussian_env_weight.py  launcher.py  local_optimization_rovibrational_v3j2.py  local_optimization_rovibrational_v3j3.py  local_optimization_vibladder_system.py  optimize_and_plot_v3j3.py  params_CO2_AntiSymm.py  params_example_checkpoint.py  params_example_new_sweep.py  params_template.py
scripts/: check_cache.py  check_core__rk4_schrodinger.py  check_core__rk4_schrodinger_old.py  check_core__splitop_schrodinger.py  check_core_basis.py  check_core_dipole_matrix.py  check_core_electric_field.py  check_core_hamiltonian.py  check_core_propagator.py  check_dipole_builder.py  check_new_basis.py  check_new_simulations.py  check_runner_call.py  check_runner_pararell_call.py  check_simulation_runner.py  release.py  smoke_examples.py  start_jupyter.sh  test_and_update_badge.sh  test_core__rk4_schrodinger.py  test_core_basis.py  test_core_dipole_matrix.py  test_core_electric_field.py  test_core_hamiltonian.py  test_core_propagator.py  test_core_states.py  test_runner_call.py  test_simulation_runner.py  test_transitions.py  update_coverage_badge.py
tests/: .coverage  README.md  TEST_CATALOG.md  TEST_STATUS_REPORT.md  XFAIL_FIXES_REPORT.md  conftest.py  mock_objects.py  run_tests.py  test_basis.py  test_basis_twolevel.py  test_basis_unified_units.py  test_basis_viblad.py  test_dipole_comprehensive.py  test_dipole_linmol.py  test_electric_field.py  test_hamiltonian.py  test_integration.py  test_low_level_propagators.py  (+16 more)
(+337 files in other folders)
